--- a/Nails-world/css/index.css
+++ b/Nails-world/css/index.css
@@ -216,7 +216,7 @@
     .Header-wrapper{
         width: 100%;
         height: 40vh;
-        background-image: url(/Nails-world/imgs/fondo-parallax1.webp);
+        background-image: url(/Nails-world/imgs/fondo-parallax.jpg);
         position: relative;
         background-size: cover;
         background-repeat: no-repeat;
@@ -363,8 +363,8 @@
         margin: 0 0 2rem 0;
     }
     .Article-img--tecnicas{
-        width: 45%;
-        border-radius: 50%;
+        width: 55%;
+        border-radius: 10%;
         box-shadow: 1px 1px 6px #a5a5a5;
         margin: 0 0 5rem 0;
     }
@@ -379,8 +379,8 @@
             max-width: 1400px;
             margin: 5rem auto;
             display: grid;
-            grid-template-columns: repeat(5, 1fr);
-            grid-template-rows: repeat(4, 1fr);
+            grid-template-columns: repeat(4, 1fr);
+            grid-template-rows: repeat(6, 1fr);
             overflow: hidden;
             justify-content: center;
             gap: 5rem;
