--- a/Nails-world/css/index.css
+++ b/Nails-world/css/index.css
@@ -460,19 +460,20 @@
             width: 90%;
             max-width: 1400px;
             margin: 0 auto;
-            display: flex;
-            flex-flow: column nowrap;
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
             justify-content: center;
             align-items: center;
-            padding: 4rem;
-            gap: 2.5rem;
+            padding: 2rem;
+            gap: 5rem;
         }
         .Section-h2--contacto{
             width: 90%;
-            font-size: 2em;
+            font-size: 1.5em;
             font-family: var(--font-textos);
             color: var(--color-gris);
-            text-align: center;
+            text-align: justify;
+            margin: 0 0 3rem 0;
         }
         .Section-p--contacto{
             width: 90%;
@@ -482,6 +483,56 @@
             line-height: 1.875rem;
             text-align: justify;
         }
+
+        .Formulario-contacto {
+            background-color: #000000;
+            padding: 1.25rem;
+            border-radius: 8px;
+            width: 100%;
+            max-width: 500px;
+            box-sizing: border-box;
+            font-family: var(--font-textos);
+            color: var(--color-principal-azul);
+        }
+        
+        .Form-wrapper {
+            margin: 0 0 1rem 0;
+        }
+        
+        .Form-wrapper label {
+            display: block;
+            margin: 0 0 5px 0;
+            font-weight: 500;
+        }
+        
+        .Form-wrapper input,
+        .Form-wrapper textarea {
+            width: 100%;
+            padding: .625rem;
+            border: 1px solid var(--color-principal-azul);
+            border-radius: 4px;
+            box-sizing: border-box;
+        }
+        
+        .Input-file{
+            width: 1rem;
+        }
+        
+        .Form-button {
+            background-color: var(--color-principal-azul);
+            color: black;
+            padding: .625rem .9375rem;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            width: 100%;
+            font-weight: 500;
+        }
+        
+        .Form-button:hover {
+            background-color: var(--color-gris);
+        }
+        
 
         
         /* KEY FRAMES */
