formulario ok, meter una foto en la primera columna y hacer la seccion d… …e inicio

--- a/Nails-world/css/index.css
+++ b/Nails-world/css/index.css
@@ -485,7 +485,8 @@
         }
 
         .Formulario-contacto {
-            background-color: #000000;
+            background-color: #ffffff;
+            box-shadow: 1px 1px 4px #b6b6b6;
             padding: 1.25rem;
             border-radius: 8px;
             width: 100%;
