--- a/Nails-world/css/index.css
+++ b/Nails-world/css/index.css
@@ -149,7 +149,7 @@
     .Main-inicio{
         width: 80%;
         max-width: 1400px;
-        margin: 0 auto 2rem;
+        margin: 1rem auto 4rem;
     }
     .Main-wrapper{
         display: flex;
@@ -161,6 +161,7 @@
     .Main-img{
         width: 80%;
         border-radius: 7%;
+        box-shadow: 2px 2px 10px 1px rgba(0,0,0,.3);
     }
     .Main-h1{
         font-family: var(--font-titulos);
@@ -224,6 +225,7 @@
         align-items: center;
         padding: 2rem;
         gap: 2rem;
+        margin: 0 0 3rem 0;
     }
     .Wrapper-img--historia{
         width: 7rem;
@@ -243,29 +245,114 @@
     /* SECTION - INICIO - CUIDADOS */
 
     .Section-cuidados{
-        width: 90%;
+        width: 100%;
         max-width: 1400px;
         display: flex;
         flex-flow: column;
         justify-content: center;
         align-items: center;
-        margin: 2rem auto;
+        gap: 2rem;
     }
     .Section-h3--cuidados{
         font-family: var(--font-titulos);
         font-size: 4rem;
     }
 
+    .Section-video{
+        width: 60%;
+        border-radius: 10%;
+    }
+
+    /* TABLA- CUIDADOS */
+
+    .Section-tabla{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .Tabla-wrapper{
+        width: 70%;
+        min-width: 380px;
+        padding: 1.5rem;
+        border-radius: 0.7rem;
+        position: relative;
+        background-color: var(--color-principal-azul);
+        box-shadow: 4px 4px 10px 1px rgba(0,0,0,.3), -2px -2px 6px 1px rgba(0,0,0,.3);
+        border-radius: .7rem;
+    }
+    
+    .Tabla-btns{
+        display: flex;
+        flex-flow: row nowrap;
+        justify-content: space-around;
+        align-items: center;
+        margin-bottom: 1.5rem;
+        gap: 1.5rem;
+    }
+    
+    .Tabla-boton{
+        width: 100%;
+        background-color: var(--color-principal-azul);
+        font-family: var(--font-subtitulos);
+        font-size: 1.3em;
+        letter-spacing: 0.1em;
+        box-shadow: 4px 4px 10px 1px rgba(0,0,0,.3), -2px -2px 6px 1px rgba(0,0,0,.3);
+        border-radius: .7rem;
+        padding: 1rem 1rem;
+    }
+    
+    .Tabla-boton.isActive{
+        box-shadow: inset 4px 4px 10px 1px rgba(0,0,0,.3), 4px 4px 10px 1px rgba(0,0,0,.3);
+    }
+    
+    .Tabla-parrafos {
+        position: relative;
+    }
+    
+    .Tabla-p {
+        position: absolute;
+        opacity: 0;
+        top: 0;
+        font-family: var(--font-textos);
+        font-size: 0.9em;
+        text-align: justify;
+        line-height: 1.5rem;
+    }
+    
+    .Tabla-p:first-child {
+        position: static;
+    }
+    
+    .Tabla-p.isActive {
+        opacity: 1;
+    }
+    
+    /* IMAGENES - CUIDADOS */
+
+    .Section-imgs{
+        display: flex;
+        flex-flow: row nowrap;
+        justify-content: center;
+        align-items: center;
+        gap: 2rem;
+        margin: 3rem auto;
+    }
+    .Cuidados-img{
+        border-radius: 7%;
+        box-shadow: 2px 2px 10px 1px rgba(0,0,0,.3);
+    }
+    
     /* FOOTER COMÚN PARA TODAS LAS SECCIONES */
 
     .Footer{
         width: 100%;
-        background-color: var(--color-gris);
     }
     .Footer-wrapper{
         width: 100%;
         max-width: 1400px;
-        margin: 3rem auto 0;
+        margin: 2rem auto 0;
         padding: 1rem 2rem;
         display: flex;
         flex-flow: row nowrap;
