--- a/Nails-world/css/index.css
+++ b/Nails-world/css/index.css
@@ -51,6 +51,7 @@
 
     /* TIPOGRAFÍAS */
 
+    /* Tipografía para los textos */
     /* montserrat-300 - latin */
 @font-face {
     font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
@@ -76,6 +77,8 @@
     src: url('../fonts/montserrat-v26-latin-500.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
   }
 
+
+  /* Tipografía para los títulos y utilizada también en los logos */
   /* ms-madi-regular - latin */
 @font-face {
     font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
@@ -85,6 +88,8 @@
     src: url('../fonts/ms-madi-v2-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
   }
 
+
+  /* Tipografía para subtítulos */
 /* bebas-neue-regular - latin */
 @font-face {
     font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
@@ -144,7 +149,7 @@
         transform: scale(1.1);
     }
 
-    /* MAIN - PRINCIPAL */
+    /* MAIN - PRINCIPAL - INICIO */
 
     .Main-inicio{
         width: 80%;
@@ -198,7 +203,6 @@
     .Section-h3--historia{
         font-family: var(--font-titulos);
         font-size: 4rem;
-
     }
     .Section-p--historia{
         font-family: var(--font-textos);
@@ -252,6 +256,7 @@
         justify-content: center;
         align-items: center;
         gap: 2rem;
+        margin: 0 auto;
     }
     .Section-h3--cuidados{
         font-family: var(--font-titulos);
@@ -301,6 +306,7 @@
         box-shadow: 4px 4px 10px 1px rgba(0,0,0,.3), -2px -2px 6px 1px rgba(0,0,0,.3);
         border-radius: .7rem;
         padding: 1rem 1rem;
+        cursor: pointer;
     }
     
     .Tabla-boton.isActive{
@@ -331,7 +337,8 @@
     
     /* IMAGENES - CUIDADOS */
 
-    .Section-imgs{
+    .Article-imgs{
+        width: 50%;
         display: flex;
         flex-flow: row nowrap;
         justify-content: center;
@@ -339,7 +346,8 @@
         gap: 2rem;
         margin: 3rem auto;
     }
-    .Cuidados-img{
+    .Article-img{
+        width: 50%;
         border-radius: 7%;
         box-shadow: 2px 2px 10px 1px rgba(0,0,0,.3);
     }
@@ -530,10 +538,6 @@
         text-align: justify;
     }
 
-    
-
-
-
     /* CONTENIDO - TECNICAS */
 
     .Article-tecnicas{
@@ -591,7 +595,6 @@
             justify-content: center;
             border-radius: 20%;
             box-shadow: 1px 1px 6px #a5a5a5;
-            /* border: solid 3px #000000; */
             cursor: pointer;
         }
         .Galeria-img:hover{
@@ -663,7 +666,7 @@
             grid-template-columns: repeat(2, 1fr);
             justify-content: center;
             align-items: center;
-            padding: 2rem;
+            padding: 1rem;
             gap: 5rem;
         }
         .Section-h2--contacto{
@@ -682,6 +685,8 @@
             line-height: 1.875rem;
             text-align: justify;
         }
+
+        /* FORMULARIO - CONTACTO */
 
         .Formulario-contacto {
             background-color: #ffffff;
@@ -738,7 +743,7 @@
         /* KEY FRAMES */
 
 
-        /* Key Frame para el texto de la imagen principal, con opacidad del 0% al 100% */
+        /* Key Frame para el texto "Bienvenid@" de la imagen principal, con opacidad del 0% al 100% */
         @keyframes aparecer {
             from {
                 opacity: 0;
@@ -758,7 +763,7 @@
             }
         }
 
-        /* Key Frame para la rotación del logo inferior redondo */
+        /* Key Frame para la rotación del logo inferior redondo (STICKY)*/
         @keyframes girar {
             from {
                 transform: rotate(0deg);
@@ -770,12 +775,20 @@
 
         /* MEDIA QUERY */
 
-        @media (max-width: 800px){
+        /* VERSIÓN TABLETS HORIZONTAL */
+
+        @media (max-width: 850px){
             
             /* Logo sección inicio */
             .Header-img{
                 width: 70%;
                 margin: 0 auto;
+            }
+
+            /* Texto título sección (efecto parallax) */
+
+            .Header-h1{
+                font-size: 9em;
             }
             
             /* Menú responsive */
@@ -807,6 +820,34 @@
                 font-size: 1.2em;
             }
 
+            /* Inicio - Encabezado */
+
+            .Main-img{
+                width: 90%;
+            }
+            .Main-h1{
+                font-size: 4rem;
+            }
+
+            /* Inicio - Historia */
+            .Section-p--historia{
+                width: 70%;
+            }
+
+            .Section-grid--historia{
+                width: 70%;
+                display: flex;
+                flex-flow: column nowrap;
+                justify-content: center;
+            }
+
+            .Wrapper-p--historia{
+                font-size: 0.9em;
+                line-height: 1.4rem;
+            }
+
+
+
             /* Encabezado - formas */
 
             .Section-formas{
@@ -830,6 +871,7 @@
                 font-size: 4.2em;
             }
             .Article-p--formas{
+                width: 80%;
                 font-size: 0.95em;
             }
 
@@ -859,10 +901,11 @@
                 font-size: 4.2rem;
                 text-align: center;
             }
-            .Semi-permanente{
-                font-size: 3.8em;
+            .Article-h3--tecnicas.Semi-permanente{
+                font-size: 3em;
             }
             .Article-p--tecnicas{
+                width: 98%;
                 font-size: 0.95em;
             }
 
@@ -878,7 +921,7 @@
             /* Grid Galería */
 
             .Section-galeria{
-                grid-template-columns: repeat(4, 1fr);
+            grid-template-columns: repeat(4, 1fr);
             grid-template-rows: repeat(5, 1fr);
             }
 
@@ -887,9 +930,257 @@
             .Marquesina-texto{
                 font-size: 0.9em;
             }
+
+            /* Contenido - Contacto */
+
+            .Section-contacto{
+            gap: 2.5rem;
+            line-height: 1.5rem;
+            }
+            .Section-h2--contacto{
+            font-size: 1.3em;
+            margin: 0 0 2.5rem 0;
+            }
+            .Section-p--contacto{
+            font-size: 1.1em;
+            padding: 1rem 2rem;
+            line-height: 1.5rem;
+            }
         }
 
+        /* VERSIÓN TABLETS VERTICAL Y MÓVILES GRANDES */
 
+        @media (max-width: 650px){
+        
+                    /* Logo sección inicio */
+            .Header-img{
+                width: 70%;
+                margin: 0 auto;
+            }
 
+            /* Texto título sección (efecto parallax) */
 
+            .Header-h1{
+                font-size: 9em;
+            }
+            
+
+            /* Inicio - Encabezado */
+
+            .Main-img{
+                width: 95%;
+            }
+            .Main-h1{
+                font-size: 3.5rem;
+            }
+            .Section-h2--historia{
+            font-size: 1.3rem;
+            }
+            /* Inicio - Historia */
+            .Section-p--historia{
+                width: 70%;
+                font-size: 1.1em;
+            }
+
+            .Section-grid--historia{
+                width: 90%;
+            }
+
+            .Wrapper-p--historia{
+                font-size: 0.9em;
+                line-height: 1.4rem;
+            }
+
+            /* Video */
+            .Section-video{
+                width: 85%;
+            }
+
+            /* Tabla */
+            .Tabla-btns{
+                display: flex;
+                flex-flow: column nowrap;
+            }
+
+            .Article-imgs{
+                flex-flow: column nowrap;
+            }
+            .Article-img{
+                width: 90%;
+            }
+
+            /* Encabezado - formas */
+
+            .Section-formas{
+                width: 95%;
+                margin: 0 auto 1.5rem;
+                padding: 1rem;
+                gap: 2.5rem;
+            }
+            .Section-h2--formas{
+                width: 86%;
+                font-size: 1.7em;
+            }
+            .Section-p--formas{
+                width: 85%;
+                font-size: 0.95rem;
+            }
+
+            /* Contenido formas */
+            
+            .Article-h3--formas{
+                font-size: 3em;
+            }
+            .Article-p--formas{
+                width: 80%;
+                font-size: 0.95em;
+            }
+
+            /* Encabezado técnicas */
+
+            .Section-tecnicas{
+                width: 95%;
+                margin: 0 auto 1.5rem;
+                padding: 1rem;
+            }
+            .Section-h2--tecnicas{
+                width: 85%;
+                font-size: 1.5em;
+                text-align: justify;
+            }
+            .Section-p--tecnicas{
+                width: 85%;
+                font-size: 0.95rem;
+            }
+
+            /* Contenido técnicas */
+
+            .Article-tecnicas{
+                width: 78%;
+            }
+            .Article-h3--tecnicas{
+                font-size: 3rem;
+                text-align: center;
+            }
+            .Semi-permanente{
+                font-size: 2em;
+            }
+            .Article-p--tecnicas{
+                width: 98%;
+                font-size: 0.95em;
+            }
+            .Article-img--tecnicas{
+                width: 80%;
+                margin: 0 0 4rem 0;
+            }
+            
+
+            /* Contenido galería */
+
+            .Section-galeria{
+                gap: 2.5rem;
+            }
+            .Imagen-grande{
+                width: 60%;
+            }
+
+            /* Grid Galería */
+
+            .Section-galeria{
+            grid-template-columns: repeat(3, 1fr);
+            grid-template-rows: repeat(8, 1fr);
+            }
+
+            /* Marquesina Contacto */
+
+            .Marquesina-texto{
+            font-size: 0.9em;
+            }
+
+            /* Contenido - Contacto */
+
+            .Section-contacto{
+            width: 90%;
+            display: flex;
+            flex-flow: column nowrap;
+            justify-content: center;
+            align-items: center;
+            }
+            .Info-contacto{
+            display: flex;
+            flex-flow: column nowrap;
+            justify-content: center;
+            align-items: center;
+            }
+
+            /* Footer */
+
+            .Footer-nav{
+                gap: 2rem;
+            }
+            .Footer-h3{
+                font-size: 0.8em;
+            }
+            .Footer-li{
+                width: 1.5rem;
+            }
+            .Footer-copyright{
+                font-size: 1.2em;
+                margin: 2.5rem 0 0 0;
+            }
+        }
+
+        /* MEDIA PARA TELÉFONOS PEQUEÑOS */
+        @media (max-width: 450px){
+
+            /* Inicio cabecera */
+            .Header-img{
+                width: 80%;
+            }
+            .Main-img{
+                width: 97%;
+            }
+            .Main-h1{
+                font-size: 2em;
+            }
+            .Section-h2--historia{
+                width: 90%;
+            }
+            .Section-p--historia{
+                width: 90%;
+            }
+            /* Inicio Historia */
+            .Section-h2--historia{
+                font-size: 1.2em;
+            }
+            .Section-h3--historia{
+                font-size: 3em;
+            }
+            /* Inicio Cuidados */
+            .Header-h1{
+                font-size: 7em;
+            }
+            .Section-h3--cuidados{
+                font-size: 3em;
+            }
+
+            /* Grid Galería */
+            .Section-galeria{
+                grid-template-columns: repeat(2, 1fr);
+                grid-template-rows: repeat(12, 1fr);
+            }
+
+            /* Contacto Marquesina */
+            .Marquesina-texto{
+                font-size: 0.65em;
+            }
+
+            /* Contacto section */
+            .Section-h2--contacto{
+                font-size: 1.2em;
+            }
+            .Section-p--contacto{
+                font-size: 0.9em;
+            }
+        }
 
