--- a/proyecto-final-diseno-web-andrea-miguel-jarillo/Nails-world/css/index.css
+++ b/proyecto-final-diseno-web-andrea-miguel-jarillo/Nails-world/css/index.css
@@ -422,7 +422,7 @@
     .Header-wrapper{
         width: 100%;
         height: 40vh;
-        background-image: url(/imgs/fondo-parallax.jpg);
+        background-image: url(/Nails-world/imgs/fondo-parallax.jpg);
         position: relative;
         background-size: cover;
         background-repeat: no-repeat;
