--- a/Nails-world/css/index.css
+++ b/Nails-world/css/index.css
@@ -104,9 +104,6 @@
     
     /* CABECERA - INICIO */
 
-    .Header-home{
-    background-color: white;
-    }
     .Header-img{
         width: 50%;
         margin: 2rem auto;
@@ -135,7 +132,7 @@
         flex-flow: row nowrap;
         justify-content: center;
         align-items: center;
-        gap: 6rem;
+        gap: 9rem;
     }
     .Header-li{
         font-family: var(--font-subtitulos);
@@ -164,7 +161,7 @@
     }
     .Main-img{
         width: 80%;
-        border-radius: 7%;
+        border-radius: 8px;
         box-shadow: 2px 2px 10px 1px rgba(0,0,0,.3);
     }
     .Main-h1{
@@ -185,24 +182,25 @@
         flex-flow: column;
         justify-content: center;
         align-items: center;
-        margin: 2rem auto;
-        gap: 2rem;
+        margin:auto;
+        gap: 1rem;
+        margin-bottom: 3rem;
     }
     .Section-h2--historia{
         width: 70%;
-        font-size: 1.6em;
+        font-size: 1.5rem;
         font-family: var(--font-textos);
-        color: var(--color-gris);
         text-align: center;
         text-align: justify;
+        margin-bottom: 1.5em;
     }
     .Section-h3--historia{
-        font-family: var(--font-titulos);
-        font-size: 4rem;
+        font-size: 3rem;
+        font-family: var(--font-subtitulos);
     }
     .Section-p--historia{
         font-family: var(--font-textos);
-        width: 50%;
+        width: 70%;
         font-size: 1.2rem;
         text-align: justify;
         line-height: 1.5rem;
@@ -218,7 +216,7 @@
         width: 100%;
         background-color: var(--color-gris);
         object-fit: cover;
-        border-radius:7%;
+        border-radius:8px;
         display: flex;
         flex-flow: column nowrap;
         justify-content: flex-start;
@@ -226,6 +224,7 @@
         padding: 2rem;
         gap: 2rem;
         margin: 0 0 3rem 0;
+        color: white;
     }
     .Wrapper-img--historia{
         width: 7rem;
@@ -233,7 +232,7 @@
     }
     .Wrapper-h3--historia{
         font-family: var(--font-subtitulos);
-        font-size: 1.5em;
+        font-size: 2em;
     }
     .Wrapper-p--historia{
         font-family: var(--font-textos);
@@ -252,16 +251,16 @@
         justify-content: center;
         align-items: center;
         gap: 2rem;
-        margin: 0 auto;
+        margin: auto;
     }
     .Section-h3--cuidados{
-        font-family: var(--font-titulos);
-        font-size: 4rem;
+        font-size: 3rem;
+        font-family: var(--font-subtitulos);
     }
 
     .Section-video{
-        width: 60%;
-        border-radius: 10%;
+        width: 50%;
+        border-radius: 8px;
     }
 
     /* TABLA- CUIDADOS */
@@ -334,7 +333,7 @@
     /* IMAGENES - CUIDADOS */
 
     .Article-imgs{
-        width: 50%;
+        width: 43%;
         display: flex;
         flex-flow: row nowrap;
         justify-content: center;
@@ -419,7 +418,7 @@
     .Header-wrapper{
         width: 100%;
         height: 40vh;
-        background-image: url(/imgs/fondo-parallax.jpg);
+        background-image: url(../imgs/fondo-parallax.jpg);
         position: relative;
         background-size: cover;
         background-repeat: no-repeat;
@@ -464,6 +463,7 @@
     .Section-p--formas{
         width: 80%;
         background-color: var(--color-principal-azul);
+        border-radius: 8px;
         font-family: var(--font-textos);
         padding: 2rem 3rem;
         line-height: 1.875rem;
@@ -487,10 +487,8 @@
     }
     .Article-h3--formas{
         text-align: center;
-        font-size: 5em;
-        font-family: var(--font-titulos);
-        text-transform: capitalize;
-        text-shadow: var(--sombra-textos);
+        font-size: 3rem;
+        font-family: var(--font-subtitulos);
     }
     .Article-img--formas{
         width: 6.25rem;
@@ -528,6 +526,7 @@
     .Section-p--tecnicas{
         width: 90%;
         background-color: var(--color-principal-azul);
+        border-radius: 8px;
         font-family: var(--font-textos);
         padding: 2rem 3rem;
         line-height: 1.875rem;
@@ -539,7 +538,7 @@
     .Article-tecnicas{
         width: 80%;
         max-width: 1400px;
-        margin: 5rem auto;
+        margin: 6rem auto;
     }
     .Article-wrapper--tecnicas{
         display: flex;
@@ -551,19 +550,18 @@
     }
     .Article-h3--tecnicas{
         font-size: 5rem;
-        font-family: var(--font-titulos);
-        text-transform: capitalize;
-        text-shadow: var(--sombra-textos);
+        font-size: 3rem;
+        font-family: var(--font-subtitulos);
     }
     .Article-p--tecnicas{
-        width: 82%;
+        width: 60%;
         font-family: var(--font-textos);
         line-height: 1.5625rem;
         margin: 0 0 2rem 0;
     }
     .Article-img--tecnicas{
-        width: 55%;
-        border-radius: 10%;
+        width: 60%;
+        border-radius: 8px;
         box-shadow: 1px 1px 6px #a5a5a5;
         margin: 0 0 5rem 0;
     }
@@ -595,7 +593,7 @@
         }
         .Galeria-img:hover{
             transform:scale(1.02);
-            transition: 0.5s ease-in ;
+            transition: 0.1s ease-in ;
         }
 
         .Lightbox{
@@ -676,6 +674,7 @@
         .Section-p--contacto{
             width: 90%;
             background-color: var(--color-principal-azul);
+            border-radius: 8px;
             font-family: var(--font-textos);
             padding: 2rem 3rem;
             line-height: 1.875rem;
@@ -738,16 +737,6 @@
         
         /* KEY FRAMES */
 
-
-        /* Key Frame para el texto "Bienvenid@" de la imagen principal, con opacidad del 0% al 100% */
-        @keyframes aparecer {
-            from {
-                opacity: 0;
-            }
-            to {
-                opacity: 1;
-            }
-        }
 
         /* Key Frame para la marquesina, hace que se desplace el texto */
         @keyframes slide{
